Initial use of SIMD operations for the factor of 2 FFT pass